--- a/src/components/app/app.module.scss
+++ b/src/components/app/app.module.scss
@@ -1,7 +1,4 @@
 .wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 100%;
-  background: linear-gradient(to bottom, blue, pink, white, pink, blue);
+  background: #e5e5e5;
 }
