--- a/src/components/article/article.module.scss
+++ b/src/components/article/article.module.scss
@@ -1,19 +1,32 @@
 .wrapper {
-    width: 941px;
-    height: 140px;
-    background: #fff;
-    border-radius: 5px;
-    box-shadow: 0 3px 5px 2px #ccc;
-    display: flex;
-    padding: 16px;
+  width: 941px;
+  height: 140px;
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 0 3px 5px 2px #ccc;
+  display: flex;
+  padding: 16px;
 }
 
 .main {
-    width: 100%;
+  width: 100%;
+}
+
+.authorBlock {
+  width: 225px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .author {
-    width: 225px;
-    display: flex;
-    flex-direction: column;
+  font-size: 18px;
+  line-height: 28px;
+  color: rgba(0, 0, 0, 0.85);
+}
+
+.date {
+  font-size: 12px;
+  line-height: 22px;
+  color: rgba(0, 0, 0, 0.5);
 }
