--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,45 +1,47 @@
 .wrapper {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 80px;
-    background-color: #fff;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 80px;
+  background-color: #fff;
 }
 
 %btn {
-    min-width: 109px;
-    min-height: 51px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 18px;
-    line-height: 28px;
-    color: rgba(0, 0, 0, 0.85);
+  min-width: 109px;
+  min-height: 51px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  line-height: 28px;
+  color: rgba(0, 0, 0, 0.85);
 
-    &:hover, &:focus {
-        color: #1890FF;
-    }
+  &:hover,
+  &:focus {
+    color: #1890ff;
+  }
 }
 
 .homelink {
-    @extend %btn;
-    margin-left: 22px;
+  @extend %btn;
+  margin-left: 22px;
 }
 
 .signIn {
-    @extend %btn;
-    margin-left: auto;
-    margin-right: 22px;
+  @extend %btn;
+  margin-left: auto;
+  margin-right: 22px;
 }
 
 .signUp {
-    @extend %btn;
-    border: 1px solid #52C41A;
-    border-radius: 5px;
-    color: #52C41A;
-    margin-right: 22px;
+  @extend %btn;
+  border: 1px solid #52c41a;
+  border-radius: 5px;
+  color: #52c41a;
+  margin-right: 22px;
 
-    &:hover, &:focus {
-        border-color: #1890FF;
-    }
+  &:hover,
+  &:focus {
+    border-color: #1890ff;
+  }
 }
