--- a/src/components/article/article.module.scss
+++ b/src/components/article/article.module.scss
@@ -1,21 +1,53 @@
 .wrapper {
   width: 941px;
-  height: 140px;
   background: #fff;
   border-radius: 5px;
   box-shadow: 0 3px 5px 2px #ccc;
   display: flex;
-  padding: 16px;
+  flex-direction: column;
+  padding: 0 16px;
+}
+
+.firstVisible {
+  display: flex;
+  min-height: 140px;
+  padding: 16px 0;
+}
+
+.extendedWrapper {
+  min-height: 800px;
+  margin-top: 24px;
+  margin-bottom: 70px;
+}
+
+.extended {
+  display: none;
+  font-size: 20px;
+  line-height: 28px;
+  color: rgba(0, 0, 0, 0.75);
+}
+
+.extendedWrapper .extended {
+  display: block;
+  align-self: flex-start;
 }
 
 .main {
-  width: 100%;
+  width: 70%;
+  height: auto;
 }
 
 .authorBlock {
-  width: 225px;
+  display: flex;
+  justify-content: flex-end;
+  width: 30%;
+  height: auto;
+}
+
+.authorBlockText {
   display: flex;
   flex-direction: column;
+  margin-right: 10px;
   align-items: center;
 }
 
@@ -23,10 +55,57 @@
   font-size: 18px;
   line-height: 28px;
   color: rgba(0, 0, 0, 0.85);
+  margin-bottom: -5px;
 }
 
 .date {
   font-size: 12px;
   line-height: 22px;
   color: rgba(0, 0, 0, 0.5);
+}
+
+.titleBlock {
+  display: flex;
+}
+
+.title {
+  font-size: 20px;
+  line-height: 28px;
+  color: #1890FF;
+
+  &:hover, &:focus {
+    text-decoration: underline;
+  }
+}
+
+.likeBlock {
+  display: flex;
+  align-items: center;
+  margin-left: 12px;
+}
+
+.likeNumber {
+  margin-left: 6px;
+  font-size: 12px;
+  line-height: 22px;
+  color: rgba(0, 0, 0, 0.75);
+}
+
+.tag {
+  color: rgba(0, 0, 0, 0.5);
+  border-color: rgba(0, 0, 0, 0.5);
+  padding: 2px 3px;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.description {
+  font-size: 12px;
+  line-height: 22px;
+  color: rgba(0, 0, 0, 0.75);
+}
+
+.tagBlock {
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
