--- a/src/components/text-input/text-input.module.scss
+++ b/src/components/text-input/text-input.module.scss
@@ -9,8 +9,8 @@
   }
 
   & input {
-    background: #FFFFFF;
-    border: 1px solid #D9D9D9;
+    background: #ffffff;
+    border: 1px solid #d9d9d9;
     border-radius: 4px;
     padding-left: 12px;
     padding-top: 8px;
@@ -19,12 +19,12 @@
 
   & input:focus {
     outline: none;
-    border-color: #1890FF;
+    border-color: #1890ff;
   }
 
   & input::placeholder {
     font-size: 16px;
     line-height: 24px;
-    color: #BFBFBF;
+    color: #bfbfbf;
   }
 }
