corrected SignUp styles

--- a/src/components/sign-up/sign-up.module.scss
+++ b/src/components/sign-up/sign-up.module.scss
@@ -27,7 +27,8 @@
 }
 
 .wrapper .textInputError {
-  & input, & input:focus {
+  & input,
+  & input:focus {
     border-color: #f5222d;
   }
 }
@@ -35,7 +36,7 @@
 .errorMessage {
   font-size: 14px;
   line-height: 22px;
-  color: #F5222D;
+  color: #f5222d;
   margin-top: 2px;
 }
 
