--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -56,10 +56,11 @@
 }
 
 .wrapper .createArticle {
-  color: #52C41A;
-  border-color: #52C41A;
-  &:hover, &:focus {
-    background-color: #52C41A;
+  color: #52c41a;
+  border-color: #52c41a;
+  &:hover,
+  &:focus {
+    background-color: #52c41a;
   }
 }
 
