--- a/src/components/profile-link/profile-link.module.scss
+++ b/src/components/profile-link/profile-link.module.scss
@@ -2,7 +2,7 @@
   display: block;
   margin-left: 25px;
   border: 1px dotted transparent;
-  
+
   & span {
     transition: all 0.5s ease;
     margin-right: 12px;
@@ -10,13 +10,14 @@
     line-height: 28px;
     color: rgba(0, 0, 0, 0.85);
   }
-  &:hover, &:focus {
+  &:hover,
+  &:focus {
     span {
-      color: #1890FF;
+      color: #1890ff;
     }
   }
   &:focus {
-    border-color: #1890FF;
+    border-color: #1890ff;
     border-radius: 5px;
   }
 }
