create-article-page completed

--- a/src/components/create-article-page/create-article-page.module.scss
+++ b/src/components/create-article-page/create-article-page.module.scss
@@ -21,3 +21,10 @@
   line-height: 28px;
   color: #262626;
 }
+
+.success {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  color: #52C41A;
+}
