--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -39,6 +39,8 @@
   border-radius: 5px;
   color: #52c41a;
   margin-right: 22px;
+  background: #fff;
+  cursor: pointer;
 
   &:hover,
   &:focus {
@@ -53,6 +55,7 @@
   margin-left: 27px;
   border-color: rgba(0, 0, 0, 0.75);
   color: rgba(0, 0, 0, 0.75);
+  outline: none;
 }
 
 .wrapper .createArticle {
