--- a/src/components/article-page/article-page.module.scss
+++ b/src/components/article-page/article-page.module.scss
@@ -60,11 +60,11 @@
 .edit {
   @extend .button;
   width: 65px;
-  border-color: #52C41A;
-  color: #52C41A;
+  border-color: #52c41a;
+  color: #52c41a;
   &:hover,
   &:focus {
-    background: #52C41A;
+    background: #52c41a;
   }
 }
 
