--- a/src/components/article-page/article-page.module.scss
+++ b/src/components/article-page/article-page.module.scss
@@ -157,7 +157,7 @@
   border-radius: 4px;
   box-shadow: 0 3px 5px 2px #ccc;
   &:before {
-    content: "";
+    content: '';
     position: absolute;
     top: 12px;
     left: -5px;
