--- a/src/components/article/article.module.scss
+++ b/src/components/article/article.module.scss
@@ -64,7 +64,18 @@
 .likeBlock {
   display: flex;
   align-items: center;
+  margin: 0;
+  padding: 0;
+  background: #fff;
+  outline: none;
+  border: 1px solid transparent;
+  border-radius: 5px;
   margin-left: 12px;
+  cursor: pointer;
+
+  &:focus {
+    border: 1px dashed #ccc;
+  }
 }
 
 .likeNumber {
